# cd13303-genai-c1-classroom

./: .gitignore  lesson-1-role-based-prompting.ipynb  pyproject.toml  requirements16-18-project.txt
module-10-implementing-neural-networks-using-pytorch/exercises/starter/: optimizer-bakeoff-starter.ipynb
module-12-generating-text-using-llms/exercises/starter/: generating-one-token-at-a-time-starter.ipynb
module-16-applying-peft-on-foundation-models/exercises/solution/: teach-an-llm-to-spell-with-sft-solution.ipynb
module-16-applying-peft-on-foundation-models/exercises/starter/: teach-an-llm-to-spell-with-sft-starter.ipynb
module-18-reinforcement-fine-tuning-on-foundation-models/exercises/starter/: teach-an-llm-to-spell-with-grpo-starter.ipynb
module-5-building-applications-using-foundation-models/exercises/starter/: build-a-spam-classifier-using-a-foundation-model-starter.ipynb
module-8-implementing-evaluations-for-generative-ai-models/exercises/starter/: gen-ai-evaluation-medley-starter.ipynb
project/: requirements.txt
