[project]
name = "genai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.7",
    "openai>=2.9.0",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "transformers[torch]>=4.57.3",
]
[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu130" },
]
torchvision = [
    { index = "pytorch-cu130" },
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
